alignment fixes on home page

--- a/src/components/common/back/back.scss
+++ b/src/components/common/back/back.scss
@@ -41,6 +41,7 @@ i {
     border: none;
     background: none;
     box-shadow: none;
+    cursor: pointer;
   }
 }
 
