--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -5,28 +5,27 @@ $breakpoint-largemonitor: 1600px;
   display: flex;
   align-items: center;
   margin: 0 auto;
-  @media (max-width: $breakpoint-tablet) {
-    display: inline;
-    width: 50%;
-    text-align: center;
-  }
+  // @media (min-width: $breakpoint-tablet) {
+  //   display: inline;
+  //   width: 50%;
+  //   text-align: center;
+  // }
 }
 
 .introduction {
-  padding: 0px 0px 200px 0px;
-  max-width: 400px;
-  @media (max-width: $breakpoint-largemonitor) {
-    padding: 0px;
-    max-width: 500px;
-  }
+  padding: 0px 0px 50px 0px;
+  // @media (min-width: $breakpoint-largemonitor) {
+  //   padding: 0px;
+  //   max-width: 500px;
+  // }
 }
 
 .introduction h1 {
   font-size: 30px;
   margin: 10px 0px;
-  @media (max-width: $breakpoint-largemonitor) {
-    font-size: 50px;
-  }
+  // @media (min-width: $breakpoint-largemonitor) {
+  //   font-size: 50px;
+  // }
 }
 
 .introduction h2 {
@@ -34,7 +33,7 @@ $breakpoint-largemonitor: 1600px;
   margin: 10px 0px;
   padding-bottom: 20px;
   font-weight: 500;
-  @media (max-width: $breakpoint-largemonitor) {
-    font-size: 25px;
-  }
+  // @media (min-width: $breakpoint-largemonitor) {
+  //   font-size: 25px;
+  // }
 }
