--- a/src/index.scss
+++ b/src/index.scss
@@ -54,8 +54,8 @@ p {
 .project-wrapper {
   display: flex;
   align-items: center;
-  width: 75%;
-  justify-content: space-evenly;
+  width: 100%;
+  justify-content: center;
   margin: 0 auto;
   height: auto;
 }
@@ -63,6 +63,7 @@ p {
 .flag-group {
   display: flex;
   width: 700px;
+  height: 350px;
 }
 
 .flag {
@@ -76,9 +77,7 @@ p {
 }
 
 .custom-description {
-  display: inline-grid;
-  padding: 0px 100px 150px 0px;
-  max-width: 400px;
+  padding: 0px 0px 100px 0px;
 }
 
 .description-container {
